[gd_scene load_steps=11 format=3 uid="uid://bgs17ugqqunj6"]

[ext_resource type="Script" uid="uid://cr511sh1gketw" path="res://enemies/Object_thorwer_enemy/node_2d.gd" id="1_cunvd"]
[ext_resource type="PackedScene" uid="uid://d3acfj6fdx1dk" path="res://enemies/Object_thorwer_enemy/ThrownObject.tscn" id="2_cunvd"]
[ext_resource type="Texture2D" uid="uid://y7rqn3uh3fe3" path="res://images/Thingsummoner.png" id="3_cunvd"]
[ext_resource type="Script" uid="uid://06nwsag16nhc" path="res://components/health.gd" id="3_pxf6n"]
[ext_resource type="Script" uid="uid://dxubttw4vrt0r" path="res://components/EnemyHurtBox.gd" id="4_guiqy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_guiqy"]
atlas = ExtResource("3_cunvd")
region = Rect2(0, 0, 45, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxf6n"]
atlas = ExtResource("3_cunvd")
region = Rect2(45, 0, 45, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_rq10f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_guiqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxf6n")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_pn1m2"]
radius = 11.4018

[sub_resource type="CircleShape2D" id="CircleShape2D_pxf6n"]
radius = 30.0666

[node name="ObjectThrowerEnemy" type="CharacterBody2D"]
position = Vector2(154, 103)
script = ExtResource("1_cunvd")
summonedshit = ExtResource("2_cunvd")
summonedshitt = ExtResource("2_cunvd")
summonedshittt = ExtResource("2_cunvd")
summonedshitttt = ExtResource("2_cunvd")
wait_time = 2.0

[node name="Health" type="Node" parent="."]
script = ExtResource("3_pxf6n")
max_health = 30
metadata/_custom_type_script = "uid://06nwsag16nhc"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(123, 61)
sprite_frames = SubResource("SpriteFrames_rq10f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(127, 64)
shape = SubResource("CircleShape2D_pn1m2")

[node name="SummonPlace1" type="Node2D" parent="."]
position = Vector2(127, 19)

[node name="SummonPlace2" type="Node2D" parent="."]
position = Vector2(64, 61)

[node name="SummonPlace3" type="Node2D" parent="."]
position = Vector2(131, 107)

[node name="SummonPlace4" type="Node2D" parent="."]
position = Vector2(171, 68)

[node name="FollowTimer" type="Timer" parent="."]

[node name="SummonTimer" type="Timer" parent="."]

[node name="EnemyHurtBox" type="Area2D" parent="." node_paths=PackedStringArray("health")]
position = Vector2(117, 67)
script = ExtResource("4_guiqy")
health = NodePath("../Health")
metadata/_custom_type_script = "uid://dxubttw4vrt0r"

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHurtBox"]
shape = SubResource("CircleShape2D_pxf6n")
